--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "leancloud-storage": "^4.3.1"
+    "jquery": "^3.3.1",
+    "leancloud-storage": "^3.6.0",
+    "plupload": "^2.3.2",
+    "qiniu": "^7.1.2",
+    "qiniu-js": "^1.0.22"
   }
 }
